--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,9 @@ settings:
   recording:
     data_interval_ms: 10
     tare_data_amount: 300
+  filter:
+    fc: 5.00
+    order: 6
 sensor_groups:
   platform_1:
     name: Platform 1
