--- a/.github/workflows/project_test.yaml
+++ b/.github/workflows/project_test.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install loguru pyyaml pandas
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pytest-mock
       
       - name: Run project tests
         run: python -m pytest tests/ --cov --cov-report term-missing
