--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,7 +2,7 @@
 base = "dark"
 primaryColor = "#326295"
 [client]
-toolbarMode = "auto"
-# toolbarMode = "minimal"
+# toolbarMode = "auto" Use this option for dev tools.
+toolbarMode = "minimal"
 [browser]
 gatherUsageStats=false
