Remove attestation provenance and soft-trigger GHA on master pushes

--- a/.github/workflows/docker_image.yaml
+++ b/.github/workflows/docker_image.yaml
@@ -1,8 +1,15 @@
 name: Docker Image CI for GHCR and DockerHub
 
 on:
+  push:
+    branches:
+    - master
+    paths:
+    - ".github/workflows/docker_image.yaml"
+    - "Dockerfile"
   release:
-    types: [published]
+    types:
+    - published
 
 jobs:
   push_to_registries:
@@ -43,13 +50,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: ${{ github.event_name == 'release' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ghcr.io/aaronpb/force-platform-app
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: false
