--- a/.github/workflows/docker_image.yaml
+++ b/.github/workflows/docker_image.yaml
@@ -16,21 +16,26 @@ jobs:
     name: Push Docker image to GHCR and DockerHub
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
-      attestations: write
-      id-token: write
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
+        if: github.event_name == 'release'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.WHALE }}
           password: ${{ secrets.TAIL }}
 
       - name: Log in to the Container registry
+        if: github.event_name == 'release'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -50,6 +55,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: [linux/amd64,linux/arm64,linux/arm/v7]
           push: ${{ github.event_name == 'release' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
