Include src and test subfolders into GHA triggers

--- a/.github/workflows/project_lint_black.yaml
+++ b/.github/workflows/project_lint_black.yaml
@@ -5,17 +5,13 @@ on:
     branches:
     - master
     - develop
-    paths:
-    - 'app.py'
-    - 'src/*'
-    - 'tests/*'
   push:
     branches:
     - master
     paths:
     - 'app.py'
-    - 'src/*'
-    - 'tests/*'
+    - 'src/**/*'
+    - 'tests/**/*'
 
 jobs:
   lint:
