--- a/.github/workflows/project_test.yaml
+++ b/.github/workflows/project_test.yaml
@@ -11,8 +11,8 @@ on:
     paths:
     - 'app.py'
     - 'pytest.ini'
-    - 'src/*'
-    - 'tests/*'
+    - 'src/**/*'
+    - 'tests/**/*'
 
 jobs:
   test:
