Remove requirements and move dev dockerfile to devcontainer folder

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "force-platform-app-dev",
     "build": {
-      "dockerfile": "../Dockerfile.dev",
+      "dockerfile": "Dockerfile",
       "context": ".."
     },
     "runArgs": [
